--- a/style.css
+++ b/style.css
@@ -1,4 +1,9 @@
 /* shared style */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap');
+
+body{
+    font-family: poppins;
+}
 header{
     padding: 50px 100px;
 }
@@ -6,8 +11,18 @@ header{
     background-color: rgb(212, 108, 126);
     color: white;
     border: none;
-    padding: 10px 30px;
+    padding: 10px 24px;
+    font-weight: 700;
+    text-align: center;
 }
+.gray{
+    color: #3A3A3A;
+}
+/* .btn-img{
+    width: 15%;
+    position: relative;
+    top: 5px;
+} */
 
 nav{
     display: flex;
@@ -15,7 +30,7 @@ nav{
 }
 nav h3{
     width: 50%;
-    
+    font-size: 1.25rem;
 }
 nav ul{
     display: flex;
@@ -31,7 +46,9 @@ nav li a{
     color: black;
     text-decoration: none;
 }
+
 /* banner section */
+
 .banner-container{
     display: flex;
     justify-content: space-between;
@@ -43,14 +60,131 @@ nav li a{
     background-repeat: no-repeat;
     margin-top: 30px;
 }
+.banner-title{
+    font-size: 3.25rem;
+    font-weight: 700;
+    margin-bottom: 5px;
+}
+.banner-description{
+    font-weight: 600;
 
+}
 .banner-img img{
     /* width: 90%; */
 }
 .banner-btn{
     border-radius: 30px;
 }
+.banner-container button{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
-@media screen and (max-width: 576px) {
+.grid-container{
+    display: grid;
+    border: 1px solid;
+    max-width: 1400px;
+    margin: 50px auto 0;
+    min-height: 400px;
+    grid-template-columns: repeat(4,1fr);
+    gap: 10px;
+}
+
+.single-product{
+    
+    box-shadow: 2px 2px 4px black;
+    background-color: slategray;
+    border-radius: 10px;
+    padding: 0 10px;
+}
+.single-product img{
+    display: block;
+    width: 80%;
+    margin: 0 auto;
+}
+.product-icon-name-container{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.product-icon-name-container span{
+    padding: 10px;
+    background-color: blueviolet;
+    border-radius: 50%;
+    margin-left: 5px;
+    color: white;
+}
+.discount-section{
+    background-color: blueviolet;
+    min-height: 500px;
+    padding: 20px 0;
+}
+.discount-container{
+    max-width: 1400px;
+    margin: 0 auto;
+    border: 1px solid yellow;
+    min-height: 200px;
+    display: flex;
+    align-items: center;
+}
+.discount-img{
+    width: 50%;
     
 }
+.discount-img img{
+    width: 70%;
+    height: 100%;
+    display: block;
+    margin: 0 auto;
+}
+
+
+
+
+
+
+
+@media screen and (max-width: 800px) {
+    .grid-container{
+        grid-template-columns: 1fr;
+    }
+
+}
+@media screen and (max-width: 700px) {
+    .grid-container{
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+}
+
+@media screen and (max-width: 576px) {
+    nav, nav ul{
+        flex-direction: column;
+    }
+    .banner-container{
+        flex-direction: column-reverse;
+    }
+    header{
+        padding: 20px;
+    }
+    .banner-img img{
+        width: 90%;
+    }
+    .banner-img{
+        background-size: 80%;
+    }
+    
+    .banner-title,
+    .banner-description{
+        text-align: center;
+        
+    }
+    .banner-btn{
+        margin-left: 90px;
+    }
+    .grid-container{
+        grid-template-columns: 1fr;
+    }
+}
+
